added grafana dashboard and provisioned datasource

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,8 @@ services:
       - prometheus
     ports:
       - 3000:3000
+    volumes:
+      - ./grafana/provisioning/:/etc/grafana/provisioning/
 
   prometheus-demo-app:
     image: barrycommins/prometheus-demo-app
