--- a/prometheus-demo-app/src/main/resources/application.yml
+++ b/prometheus-demo-app/src/main/resources/application.yml
@@ -1,6 +1,5 @@
 management:
-  security:
-    enabled: false
-security:
-  basic:
-    enabled: false
+  endpoints:
+    web:
+      exposure:
+        include: "*"
