--- a/prometheus-eureka-server/src/main/resources/bootstrap.yml
+++ b/prometheus-eureka-server/src/main/resources/bootstrap.yml
@@ -4,9 +4,9 @@ spring:
 eureka:
   instance:
     metadata-map:
-      metrics.path: ${management.context-path:}/${endpoints.prometheus.id:prometheus}
-      health.path: ${management.context-path:}/${endpoints.health.id:health}
-      management.context-path: ${management.context-path:}
+      metrics.path: ${management.context-path:/actuator}/${endpoints.prometheus.id:prometheus}
+      health.path: ${management.context-path:/actuator}/${endpoints.health.id:health}
+      management.context-path: ${management.context-path:/actuator}
   client:
     service-url:
       default-zone: http://localhost:8761/eureka
