updated to Spring Boot 2.3.1
* Updated to Spring Boot 2.3.1
* Updated Spring Cloud to Hoxton.SR5
* simplified eureka metadata
* updated Eureka Consul Adapter to 1.4.0
* change Prometheus mapping due to adapter change
* changed Docker image build to package phase instead of install

--- a/prometheus-demo-app/src/main/resources/bootstrap.yml
+++ b/prometheus-demo-app/src/main/resources/bootstrap.yml
@@ -4,9 +4,9 @@ spring:
 eureka:
   instance:
     metadata-map:
-      metrics.path: ${management.context-path:/actuator}/${endpoints.prometheus.id:prometheus}
-      health.path: ${management.context-path:/actuator}/${endpoints.health.id:health}
-      management.context-path: ${management.context-path:/actuator}
+      metrics.path: /actuator/prometheus
+      health.path: /actuator/health
+      management.context-path: /actuator
   client:
     service-url:
       defaultZone: ${EUREKA_SERVICE_URI:http://localhost:8761/eureka}
